--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -1,145 +1,52 @@
-body {
-    background-color: #F2F2EB;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
-
-.header {
-    height: 11.2vh;
-    background: #F2E3B3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 2.083vw;
-    padding-left: 4.166vw;
-}
-
-.logo {
-    width: 6.25vw;
-    height: 10vh;
-    top: 0.3vw;
-}
-
-.search-form {
-    display: flex;
-    align-items: center;
-    gap: 0.52vw;
-    padding-left: 1.0415vw;
-    background: #FBEFC7;
-    border-radius: 2.7vw;
-}
-
-.search-form input {
-    height: 6.19vh;
-    width: 41.67vw;
-    margin-left: 1vw;
-    margin-top: 0.2vh;
-    flex: 1;
-    border: none;
-    background: #FBEFC7;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.5vw;
-    border-radius: 0 5.5vh 5.5vh 0;
-    outline: none;
-}
-
-.magnifier{
-    height: 3.3333333333vh;
-    width: 1.875vw;
-}
-
-.button-style {
-    display: flex;
-    background-color: #3E5902;
-    height: 5.7407vh;
-    width: 6.4640625vw;
-    border-radius: 2.7vw;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vw;
-    text-decoration: none;
-}
-
-.heart img, .user img{
-    width: 3.6458vw;
-    height: 5.5555vh;
-}
-
-.heart-container, .user-container, .heart-login-container, .user-login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    border: none;
-    background-color: #F2E3B3;
-}
-
-.user-container:hover {
-    background-color: #733506;
-    width: 4.6vw;
-    height: 9.2593vh;
-}
-
-.heart-container:hover{
-    cursor: not-allowed;
-}
-
-.heart-login-container:hover{
-    background-color: #B90F0F;
-}
-
-.home{
-    height: 5.55555555vh;
-    width: 3.125vw;
-}
-
 a:visited, a:link {
     text-decoration: none;
 }
 
-.First-Dish{
+.First-Dish {
     width: 2.65625vw;
-    height:5.5556vh;
+    height: 5.5556vh;
 }
 
-.Main-Dish{
+.Main-Dish {
     width: 3vw;
     height: 4vh;
 }
 
-.Salad{
+.Salad {
     width: 2.0833vw;
-    height:4.167vh;
+    height: 4.167vh;
 }
 
-.Dessert{
+.Pastry {
+    width: 4vw;
+    height: 4.167vh;
+}
+
+.Dessert {
     width: 4vw;
     height: 4.5vh;
 }
 
-.Drink{
+.Drink {
     width: 2.34375vw;
     height: 4.1667vh;
 }
 
-.Snack{
-    width: 3vw;/*45*/
-    height: 4vh;/*30*/
+.Snack {
+    width: 3vw; /*45*/
+    height: 4vh; /*30*/
 }
 
-.Fish-Dish{
+.Fish-Dish {
     width: 2.34375vw;
     height: 3.24075vh; /*35*/
 }
 
-.Sauce{
+.Sauce {
     width: 1.927084vw;
     height: 4.3518vh; /*37*/
 }
+
 /*____________________________________________________________________________________________________________________*/
 
 .container {
@@ -168,7 +75,7 @@ a:visited, a:link {
 
 }
 
-.boardTwoTitle{
+.boardTwoTitle {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2vw; /*42*/
@@ -213,7 +120,7 @@ ul li:hover {
 
 ul hr {
     border: 0.104167vw solid black;
-    margin: 0.520834vw ;
+    margin: 0.520834vw;
     margin-left: 0.5vw;
     margin-right: 0.6vw;
 }
@@ -237,56 +144,58 @@ ul hr {
     border-radius: 50px;
 }
 
-.fieldForCategory{
+.fieldForCategory {
     width: 12.5vw; /*240*/
-    height:66.67vh; /*720*/
+    height: 66.67vh; /*720*/
     margin-right: 2.344vw;
 }
 
-.categoriesI{
-    width:1.5625vw;/*30*/
-    height:2.78vh;/*30*/
+.categoriesI {
+    width: 1.5625vw; /*30*/
+    height: 2.78vh; /*30*/
 }
 
-.timeI{
-    width: 1.5625vw;/*30*/
-    height:2.963vh;/*32*/
+.timeI {
+    width: 1.5625vw; /*30*/
+    height: 2.963vh; /*32*/
 }
 
-.alphabetI{
-    width: 1.5625vw;/*30*/
-    height:1.574vh;/*17*/
-}
-.ratingI{
-    width: 1.5625vw;/*30*/
-    height: 1.4vh;/*15*/
+.alphabetI {
+    width: 1.5625vw; /*30*/
+    height: 1.574vh; /*17*/
 }
 
-.ingredientsI{
-    width:1.5625vw;/*30*/
-    height:2.78vh;/*30*/
+.ratingI {
+    width: 1.5625vw; /*30*/
+    height: 1.4vh; /*15*/
 }
 
-.devicesI{
-    width:1.5625vw;/*30*/
-    height:2.78vh;/*30*/
+.ingredientsI {
+    width: 1.5625vw; /*30*/
+    height: 2.78vh; /*30*/
+}
+
+.devicesI {
+    width: 1.5625vw; /*30*/
+    height: 2.78vh; /*30*/
 }
 
 /*____________________________________________________________________________________________________________________*/
 
-.board{
+.board {
     width: 18vw; /*280*/
-    height:76vh; /*820*/
+    height: 76vh; /*820*/
     margin-top: 3.5vh;
 }
 
 .bean {
     position: absolute;
-    width: 2vw;/*35*/
-    height: 4.8vh;/*45*/
+    width: 2vw; /*35*/
+    height: 4.8vh; /*45*/
     left: 8vw;
     top: 82vh;
 }
+
 /*____________________________________________________________________________________________________________________*/
 .apply-button {
     position: absolute;
@@ -334,7 +243,7 @@ ul hr {
     background-color: #F2E3B3;
 }
 
-.ol{
+.ol {
     position: absolute;
     width: 79vw;
     height: 74vh;
@@ -363,7 +272,7 @@ ul hr {
     border-radius: 50px;
 }
 
-.h2{
+.h2 {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.4vw; /*42*/
@@ -374,17 +283,17 @@ ul hr {
     margin-top: 2vh;
 }
 
-.h2-down{
+.h2-down {
     margin-right: 1.6vw;
     margin-top: 7.5vh;
 }
 
-.h2-down-right{
+.h2-down-right {
     margin-top: 0vh;
     margin-left: 1.6vw;
 }
 
-.smallerField{
+.smallerField {
     position: absolute;
     width: 74vw;
     height: 14vh;
@@ -394,16 +303,20 @@ ul hr {
     border-radius: 5.5vh;
     background-color: #FBEFC7;
 }
-.smallerField-down1{
+
+.smallerField-down1 {
     top: 22vh;
 }
-.smallerField-down2{
+
+.smallerField-down2 {
     top: 40vh;
 }
-.smallerField-down3{
+
+.smallerField-down3 {
     top: 58vh;
 }
-.smallerField-down4{
+
+.smallerField-down4 {
     top: 76vh;
     bottom: 4vh;
 }
@@ -411,6 +324,7 @@ ul hr {
 table td {
     padding-left: 3vw;
 }
+
 /*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
@@ -452,7 +366,7 @@ table td {
     border: 0.46vh solid #3E5902;
 }
 
-#overlay, #overlay-user{
+#overlay, #overlay-user {
     position: fixed;
     display: none;
     width: 100%;
@@ -489,7 +403,7 @@ table td {
     z-index: 13;
 }
 
-.inner-window textarea{
+.inner-window textarea {
     width: 53vw;
     height: 27vh;
     margin-left: 1vw;
@@ -633,7 +547,7 @@ table td {
     height: 4.2592vh;
 }
 
-.instagram{
+.instagram {
     width: 2.3vw;
     height: 4.06vh;
 }
@@ -641,6 +555,7 @@ table td {
 .telegram-container:hover, .instagram-container:hover {
     background-color: #733506;
 }
+
 .copyright {
     position: static;
     width: 21vw;
@@ -654,7 +569,7 @@ table td {
     color: #F2E3B3;
 }
 
-.line{
+.line {
     position: absolute;
     left: 1vw;
     top: 16vh;
@@ -672,7 +587,7 @@ table td {
     height: 5.6vh;
 }
 
-.item{
+.item {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.5vw;
     padding-left: 0.2605vw;
@@ -680,18 +595,18 @@ table td {
     cursor: pointer;
 }
 
-.item a{
+.item a {
     color: black;
     display: block;
     line-height: 5.5vh;
 }
 
-.item a:hover{
+.item a:hover {
     background-color: #F2B705;
     border-radius: 2.7vh;
 }
 
-.item a .dropdown{
+.item a .dropdown {
     position: absolute;
     top: 1.5vh;
     right: 0;
@@ -699,7 +614,7 @@ table td {
     color: #733506;
 }
 
-.item .sub-menu{
+.item .sub-menu {
     background: rgba(255, 255, 255, 0.1);
     display: none;
 }
@@ -709,10 +624,12 @@ table td {
     align-items: center;
     margin-bottom: 5px;
 }
+
 .dish-container input {
     margin-right: 10px;
     background: #733506;
 }
+
 .dish {
     text-decoration: none;
     color: black;
@@ -721,6 +638,7 @@ table td {
 .dish-container input[type="checkbox"] {
     display: none;
 }
+
 .dish-container label::before {
     content: "";
     display: inline-block;
@@ -731,21 +649,30 @@ table td {
     vertical-align: middle;
     border-radius: 50%;
 }
+
 .dish-container input[type="checkbox"]:checked + label::before {
     background-color: #733506;
     border-color: #733506;
     border-radius: 50%;
 }
 
-.dropdown {
-    margin-left: auto;
+.sub-btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
 }
 
-.sub-menu a{
+.dropdown {
+    position: absolute;
+    margin-right: 0.4vw;
+}
+
+.sub-menu a {
     padding-left: 1vw;
 }
 
-.rotate{
+.rotate {
     transform: rotate(180deg);
 }
 
@@ -755,5 +682,34 @@ hr {
     margin-right: 0.5vw;
     margin-left: 2vw;
 }
+
+.timeContainer {
+    padding-left: 1vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.minTime, .maxTime {
+    display: flex;
+    align-items: center;
+    padding-left: 0.2vw;
+}
+
+.minTime {
+    margin-right: 15px;
+}
+
+.minTime input, .maxTime input {
+    width: 3vw;
+    height: 5vh;
+    flex: 1;
+    border: none;
+    background: #FBEFC7;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.5vw;
+    outline: none;
+}
+
 
 
