--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -65,16 +65,6 @@ a:visited, a:link {
     margin-right: 1.7vw;
 }
 
-.h1 {
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.4vw; /*42*/
-    color: #733506;
-    position: absolute;
-    margin-left: 5.4vw;
-    margin-top: 1vh;
-
-}
-
 .boardTwoTitle {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
@@ -99,33 +89,6 @@ a:visited, a:link {
     margin-left: 1.7vw;
 }
 
-ul {
-    padding-left: 0.2605vw;
-    margin-left: 0.521vw;
-}
-
-ul li {
-    list-style: none;
-    padding-left: 0.2605vw;
-    margin-left: 0.4vw;
-    margin-right: 0.7vw;
-}
-
-ul li:hover {
-    background-color: #F2B705;
-    border-radius: 5.5vw;
-    height: 5vh;
-    width: 10vw;
-}
-
-ul hr {
-    border: 0.104167vw solid black;
-    margin: 0.520834vw;
-    margin-left: 0.5vw;
-    margin-right: 0.6vw;
-}
-
-/*____________________________________________________________________________________________________________________*/
 .ulBoard::-webkit-scrollbar {
     width: 0.78125vw;
     margin-left: 5vw;
@@ -272,27 +235,6 @@ ul hr {
     border-radius: 50px;
 }
 
-.h2 {
-    position: absolute;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.4vw; /*42*/
-    font-size: 3.8889vh;
-    color: #733506;
-    left: 1.6vw;
-    margin-bottom: 0.5vh;
-    margin-top: 2vh;
-}
-
-.h2-down {
-    margin-right: 1.6vw;
-    margin-top: 7.5vh;
-}
-
-.h2-down-right {
-    margin-top: 0vh;
-    margin-left: 1.6vw;
-}
-
 .smallerField {
     position: absolute;
     width: 74vw;
@@ -323,258 +265,6 @@ ul hr {
 
 table td {
     padding-left: 3vw;
-}
-
-/*____________________________________________________________________________________________________________________*/
-.footer {
-    position: fixed;
-    width: 100%;
-    height: 5.6vh;
-    top: 94.4vh;
-    bottom: 0;
-    background-color: #3E5902;
-    color: #F2E3B3;
-    padding: 1.4vh;
-    display: flex;
-    left: 0;
-    justify-content: space-between;
-    z-index: 5;
-}
-
-
-#send-button {
-    position: absolute;
-    right: 4.6875vw;
-    width: 9.0105vw;
-    height: 4.2593vh;
-    background-color: #3E5902;
-    border-radius: 2.7vw;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
-    font-size: 1.25vw;
-    color: #FBEFC7;
-    border: none;
-    top: 37.04vh;
-    bottom: 1.4815vh;
-    z-index: 15;
-}
-
-#send-button:hover {
-    background-color: #FBEFC7;
-    color: #3E5902;
-    border: 0.46vh solid #3E5902;
-}
-
-#overlay, #overlay-user {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 10;
-}
-
-.window {
-    position: fixed;
-    display: none;
-    bottom: 9.2593vh;
-    left: 9.6vh;
-    width: 59.375vw;
-    height: 43.056vh;
-    background: #F2E3B3;
-    padding: 0.02vw;
-    z-index: 11;
-    border-radius: 5.5vh;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.inner-window {
-    background: #FBEFC7;
-    position: absolute;
-    width: 55.2083vw;
-    height: 31.945vh;
-    left: 2.1354167vw;
-    top: 3.5185vh;
-    padding-left: 0.01vw;
-    border-radius: 2.25vh;
-    z-index: 13;
-}
-
-.inner-window textarea {
-    width: 53vw;
-    height: 27vh;
-    margin-left: 1vw;
-    margin-top: 0.2vh;
-    flex: 1;
-    border: none;
-    background: #FBEFC7;
-    border-radius: 2.25vh 2.25vh 0 0;
-    font-family: 'Frank Ruhl Libre', serif;
-    outline: none;
-    resize: none;
-    autocomplete: off;
-    font-size: 2vw;
-    scrollbar-width: none;
-}
-
-.login-window {
-    position: fixed;
-    display: none;
-    border-radius: 2.7vw;
-    width: 26vw;
-    height: 30vh;
-    left: 72.9vw;
-    bottom: 59.7vh;
-    background-color: #F2E3B3;
-    z-index: 11;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.login-form {
-    border-radius: 2.7vw;
-    position: absolute;
-    width: 21vw;
-    height: 4.5vh;
-    z-index: 13;
-    left: 1.5vw;
-}
-
-.email {
-    top: 7vh;
-}
-
-.password {
-    top: 14.8vh;
-}
-
-.login-heading {
-    position: absolute;
-    right: 9.58vw;
-    bottom: 21.5vh;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2vw;
-}
-
-.email input, .password input {
-    width: 21.979vw;
-    height: 6.19vh;
-    flex: 1;
-    border: none;
-    background: #FBEFC7;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2vh;
-    font-size: 2vw;
-    border-radius: 5.5vh;
-    outline: none;
-    padding-left: 1vw;
-}
-
-#confirm-button {
-    background-color: #3E5902;
-    position: absolute;
-    width: 15.6vw;
-    height: 5vh;
-    right: 5.2vw;
-    bottom: 1.7vh;
-    z-index: 15;
-    border-radius: 2.7vw;
-    cursor: pointer;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2vw;
-    color: #FBEFC7;
-    border: none;
-}
-
-.support-button {
-    position: relative;
-    left: 4.6875vw;
-    bottom: 0.6481vh;
-    background-color: #F2E3B3;
-    color: #733506;
-    border-radius: 2.7vw;
-    padding: 0.19vw;
-    width: 8.4375vw;
-    height: 4.2593vh;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 4.2593vh;
-    border: none;
-    cursor: pointer;
-    outline: none;
-}
-
-.support-button span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.support-button:hover {
-    background-color: transparent;
-    border: 0.5vh solid #F2E3B3;
-    color: #F2E3B3;
-}
-
-.circle-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F2E3B3;
-    border-radius: 50%;
-    width: 2.4vw;
-    height: 5vh;
-    bottom: 1vh;
-}
-
-.telegram-container {
-    right: 5vw;
-}
-
-.instagram-container {
-    right: 3vw;
-}
-
-.telegram {
-    width: 2.39583vw;
-    height: 4.2592vh;
-}
-
-.instagram {
-    width: 2.3vw;
-    height: 4.06vh;
-}
-
-.telegram-container:hover, .instagram-container:hover {
-    background-color: #733506;
-}
-
-.copyright {
-    position: static;
-    width: 21vw;
-    height: 3vh;
-    margin: auto;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 1vh;
-    text-align: left;
-    color: #F2E3B3;
-}
-
-.line {
-    position: absolute;
-    left: 1vw;
-    top: 16vh;
-    width: 73.2vw;
-    border: 1px solid black;
 }
 
 .comment-user-circle {
@@ -619,27 +309,29 @@ table td {
     display: none;
 }
 
-.dish-container {
+.dish-container, .ingredient-container {
     display: flex;
     align-items: center;
     margin-bottom: 5px;
 }
 
-.dish-container input {
+.dish-container input, .ingredient-container input {
     margin-right: 10px;
     background: #733506;
 }
 
-.dish {
+.dish, .ingredient {
     text-decoration: none;
     color: black;
 }
 
-.dish-container input[type="checkbox"] {
+.dish-container input[type="checkbox"],
+.ingredient-container input[type="checkbox"] {
     display: none;
 }
 
-.dish-container label::before {
+.dish-container label::before,
+.ingredient-container label::before {
     content: "";
     display: inline-block;
     width: 1vw;
@@ -650,7 +342,8 @@ table td {
     border-radius: 50%;
 }
 
-.dish-container input[type="checkbox"]:checked + label::before {
+.dish-container input[type="checkbox"]:checked + label::before,
+.ingredient-container input[type="checkbox"]:checked + label::before {
     background-color: #733506;
     border-color: #733506;
     border-radius: 50%;
@@ -665,11 +358,11 @@ table td {
 
 .dropdown {
     position: absolute;
-    margin-right: 0.4vw;
+    margin-right: 0.2vw;
 }
 
 .sub-menu a {
-    padding-left: 1vw;
+    padding-left: 0.8vw;
 }
 
 .rotate {
@@ -697,7 +390,7 @@ hr {
 }
 
 .minTime {
-    margin-right: 15px;
+    margin-right: 0.78125vw;
 }
 
 .minTime input, .maxTime input {
