added form for saving recipe to user custom list

--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Recipe</title>
     <meta charset="UTF-8">
@@ -99,11 +99,13 @@
         <div id="overlay-lists" onclick="hideOverlay()"></div>
         <div class="lists-container" id="lists-popup-window">
             <button class="create-list" id="create-new-list-btn">Create a new list</button>
-            <button th:class="${i.index == 0} ? 'user-list user-list' : 'user-list user-list' + (${i.index})"
-                    th:each="list, i : ${user.getUserLists()}"
-                    th:style="'top:' + (${i.index * 8 + 10}) + 'vh'"
-                    th:text="${list.getTitle()}">
-            </button>
+            <!--<form method="post" th:action="@{/api/newList/{id1}(id1=${id})}" th:object="recipe">
+                <button th:class="${i.index == 0} ? 'user-list user-list' : 'user-list user-list' + (${i.index})"
+                        th:each="list, i : ${user.getUserLists()}"
+                        th:style="'top:' + (${i.index * 8 + 10}) + 'vh'"
+                        th:text="${list.getTitle()}">
+                </button>
+            </form>-->
             <div class="list-container" id="list-field-popup-window">
                 <form method="post" onsubmit="return validateInput('listName')" th:action="@{/api/newList/0}"
                       th:object="${newList}">
